[project]
name = "pricemonitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[project.scripts]
pricemonitor-run = "pricemonitor.app.runtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pricemonitor"]

[tool.uv]
package = true
